k8s/mastodon/resources/external-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    gethomepage.dev/href: 'https://social.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: mastodon
    gethomepage.dev/group: Other
    gethomepage.dev/icon: mastodon
    gethomepage.dev/name: Mastodon
    external-dns.alpha.kubernetes.io/target: external.durbin.casa
spec:
  ingressClassName: external
  rules:
    - host: &host social.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/api/v1/streaming'
            backend:
              service:
                name: streaming-service
                port:
                  name: http
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web-service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
