k8s/mastodon/resources/internal-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer

    gethomepage.dev/href: 'https://social.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: mastodon
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: mastodon
    gethomepage.dev/name: Mastodon

spec:
  ingressClassName: internal
  rules:
    - host: &host social.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/api/v1/streaming'
            backend:
              service:
                name: streaming-service
                port:
                  name: http
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web-service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
